Changelog
=========

0.9.12 - Unreleased
-------------------

0.9.11 - 2010-09-20
-------------------

- Fix the cleanup method called by safe_load_site to mark the component
  registry as uninitialized regardless of whether the flag is in
  Zope2.App.zcml or Products.Five.zcml.
  [davisagli]


0.9.10 - 2010-07-13
-------------------

- Make compatible with Zope 2.13 and avoid setup problems with zope.schema
  vocabularies.
  [hannosch]

0.9.9 - 2009-11-14
------------------

- Call reindexObjectSecurity on the member folder conditionally, as CMF 2.2's
  PortalFolder no longer has this method.
  [davisagli]

- Specify all dependencies in a backwards compatible way.
  [hannosch]

0.9.8 - 2009-04-19
------------------

- Fixed deprecation warnings for use of Globals.
  [hannosch]

- Added CMF22 constant.
  [stefan]

0.9.8b4 - 2008-10-26
--------------------

- Fix homepage URL in setup.py.
  [stefan]

0.9.8b3 - 2008-10-16
--------------------

- Bugfix: Reindex security of member-area after taking ownership.
  [stefan]

0.9.8b2 - 2008-10-08
--------------------

- Egg was broken due to use of svn export. Who'd have thunk
  setuptools makes a difference?
  [stefan]

0.9.8b1 - 2008-10-05
--------------------

- Install all CMF products quietly.
- Eggified Products.CMFTestCase.

0.9.7
-----

- The CMFSite layer can now be set up more than once.

0.9.6
-----

- Deal with new skin setup in CMF 2.1 and up.
- Provide hasPackage and installPackage if ZopeTestCase supports it.
- Use new stateless GenericSetup API in CMF 2.1 and up.

0.9.4
-----

- Minor test fixes to cater for changes in CMF.

0.9.2
-----

- Added support for local component registries. We now call setSite() on the
  portal before importing profiles and before each test.

0.9.0
-----

- Added CMF21 constant.
- Prepared for switching ZopeTestCase to Zope3 interfaces.
- Load etc/site.zcml lazily instead of using the wrapper.
- Import extension profiles one by one to gain better control.