@@ -307,11 +307,7 @@ class SiteCleanup(SiteSetup):
 
 def _placefulSetUp(portal):
     '''Sets the local site/manager.'''
-    try:
-        from zope.site.hooks import setHooks, setSite
-    except ImportError:
-        from zope.app.component.hooks import setHooks, setSite
-
+    from zope.component.hooks import setHooks, setSite
     from zope.component.interfaces import ComponentLookupError
     setHooks()
     try:
@@ -322,10 +318,7 @@ def _placefulSetUp(portal):
 
 def _placefulTearDown():
     '''Resets the local site/manager.'''
-    try:
-        from zope.site.hooks import resetHooks, setSite
-    except ImportError:
-        from zope.app.component.hooks import resetHooks, setSite
+    from zope.component.hooks import resetHooks, setSite
 
     resetHooks()
     setSite()
