@@ -58,7 +58,7 @@ class TestCMFTestCase(CMFTestCase.CMFTestCase):
     if CMFTestCase.CMF21:
 
         def testGetSite(self):
-            from zope.app.component.hooks import getSite
+            from zope.component.hooks import getSite
             self.failUnless(aq_base(getSite()) is aq_base(self.portal))
 
 
